<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Todo Salud</string>
    <string name="coma" translatable="false">","</string>
    <string name="dr" translatable="false">"Dr."</string>
    <string name="inventoro" translatable="false">"Inventario: "</string>
    <string name="hyphen" translatable="false">" - "</string>
    <string name="close" translatable="false">"( "</string>
    <string name="open" translatable="false">" )"</string>
    <string name="facebook_app_id" translatable="false">783786405798755</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb783786405798755</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="space">" "</string>
    <string name="metros">Metros</string>
    <string name="Intensidad">Intensidad(1-10)</string>
    <string name="mgdl">mg/dl</string>
    <string name="lpm">lpm</string>
    <string name="lbs">lbs</string>
    <string name="mmHg">mmHg</string>
    <string name="label_remove">Remove</string>
    <string name="label_notification">Notification</string>
    <string name="label_download">Download</string>
    <string name="label_full_name">Full Name</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_re_password">Re enter password</string>
    <string name="label_phone">Phone Number</string>
    <string name="label_login">Login</string>
    <string name="label_signup">Sign Up</string>
    <string name="label_not_here">Not here? </string>
    <string name="label_already_have">Already have an account? </string>
    <string name="label_new_password">New Password</string>
    <string name="label_old_password">Old Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_confirm_new_password">Confirm New Password</string>
    <string name="label_forgot_password">Forgot Password</string>
    <string name="label_forgot_password_q">Forgot Password?</string>
    <string name="label_reset_password">Reset Password</string>
    <string name="label_send">Send</string>
    <string name="on_boarding_one_description_string_one">We are here to help you organize everything that has to do with \nyour health, totally Free</string>
    <string name="on_boarding_one_description_string_two">FREE</string>
    <string name="on_boarding_two_description_string">We are here to help you organize everything that has to do with \nyour health, totally Free</string>
    <string name="on_boarding_three_description_string">We will notify you when you have to take your meds, go on appointments with the doctor or update your checkups</string>
    <string name="on_boarding_four_description_string">Conveniently buy and receive your medicines at home. Control doses and prescriptions in one place</string>
    <string name="on_boarding_five_description_string">Keep track of your most important health indicators. see trends and share them with your doctor</string>
    <string name="on_boarding_six_description_string">And to close the circle, include your family, doctors and insurance</string>
    <string name="on_boarding_seven_description_string">And to close the circle, include your family, doctors and insurance</string>
    <string name="on_boarding_one_heading_string">Welcome to Todo Salud!</string>
    <string name="on_boarding_two_heading_string">Medicine management</string>
    <string name="on_boarding_three_heading_string">Keep track of Vital Signs</string>
    <string name="on_boarding_four_heading_string">Start new habits</string>
    <string name="on_boarding_five_heading_string">Store documents in one place</string>
    <string name="on_boarding_six_heading_string">Connect with your doctor</string>
    <string name="on_boarding_seven_heading_string">Become a caretaker of a loved one</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_enter">GET INTO</string>
    <string name="login_forgot_password">I forgot my password</string>
    <string name="login_register">I want to register</string>
    <string name="login_continue_without_registration">Continue without registration</string>
    <string name="login_credentials_error_popup_heading">review credentials</string>
    <string name="login_credentials_error_popup_content">The email or password does not match. Try again.</string>
    <string name="login_credentials_error_popup_accept">Accept</string>
    <string name="login_forgot_password_write_the_registered_email">Enter the registered email</string>
    <string name="login_forgot_password_request_password_change">Request password change</string>
    <string name="login_forgot_password_message_sent_popup_heading">Check your email</string>
    <string name="login_forgot_password_message_sent_popup_content">An email was sent with \ninstructions in order to change \nyour password.</string>
    <string name="login_forgot_password_message_sent_popup_ok">OK</string>
    <string name="login_no_registration_popup_heading">CAVEAT</string>
    <string name="login_no_registration_popup_content">If you continue without registering, your information will not be backed up and will be lost with a phone change or update.</string>
    <string name="login_no_registration_popup_register">REGISTRARME</string>
    <string name="login_no_registration_popup_register_small">Registrarme</string>
    <string name="login_no_registration_popup_continue">CONTINUE</string>
    <string name="register_registration_with_email">registration with email</string>
    <string name="register_registration_with_facebook">Register with Facebook</string>
    <string name="register_registration_with_google">Register with Google</string>
    <string name="register_continue_without_registration">Continue without registration</string>
    <string name="register_first_name">Name</string>
    <string name="register_surname">Surname</string>
    <string name="register_back">Behind</string>
    <string name="register_continue">Continue</string>
    <string name="register_email">Email</string>
    <string name="register_select_your_sex">Select your gender</string>
    <string name="register_male">Male</string>
    <string name="register_female">Female</string>
    <string name="register_birth_date">Date of birth</string>
    <string name="register_birth_date_alert">Some features of this app require you to be of legal age.</string>
    <string name="register_problem_with_age_popup_heading">problem with age</string>
    <string name="register_problem_with_age_popup_content">To use this app you need to be at least 18 years old.</string>
    <string name="register_problem_with_age_popup_accept">TO ACCEPT</string>
    <string name="register_password">Password</string>
    <string name="register_verify_password">verify password</string>
    <string name="register_password_problem_popup_heading">check password</string>
    <string name="register_password_problem_popup_content">Passwords do not match. Please write them again.</string>
    <string name="register_password_problem_popup_accept">Accept</string>
    <string name="register_privacy_policy_and_terms_and_conditions">By pressing the "Register" button, you confirm that you have read and accepted our Terms and Conditions and Privacy Policy.</string>
    <string name="register_cancel_warning_popup_heading">Do you want to cancel?</string>
    <string name="register_cancel_warning_popup_content">If you cancel this process, you will lose the data entered so far.</string>
    <string name="register_cancel_warning_popup_cancel">CANCEL</string>
    <string name="register_cancel_warning_popup_continue">CONTINUE</string>
    <string name="register_validate_email_all_ready">All ready!</string>
    <string name="register_validate_email_content">Your registration was received successfully. We have sent an email to your address to verify your email account.
In the meantime, you can start using Todo Salud.</string>
    <string name="register_validate_email_accept">Accept</string>
    <string name="schedule">Agenda</string>
    <string name="first_aid_kit">First aid kit</string>
    <string name="to_buy">Comprar</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="active_profile">ACTIVE PROFILE</string>
    <string name="create_an_account">Create an Account</string>
    <string name="add_dependent">Agregar dependiente…</string>
    <string name="add_caregiver">Agregar cuidador…</string>
    <string name="directions_nit_and_payments">Addresses, NIT and payments</string>
    <string name="set_up_my_family">set up my family</string>
    <string name="configure_notifications">configure notifications</string>
    <string name="set_up_account">set up account</string>
    <string name="about_all_health">About All Health</string>
    <string name="recommend_this_app">Recommend this app</string>
    <string name="log_out">Go out</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="see_welcome_again">see welcome again</string>
    <string name="personal_information_caps">PERSONAL INFORMATION</string>
    <string name="general_information">General information</string>
    <string name="personal_information">Personal information</string>
    <string name="health_indicators">health indicators</string>
    <string name="update_and_share_your_indicators">Update and share your indicators</string>
    <string name="terms">Terms</string>
    <string name="registration_of_health_conditions">Record of health conditions</string>
    <string name="recipes">Prescriptions</string>
    <string name="recipe">Recipe</string>
    <string name="prescriptions_prescribed_by_doctors">Prescriptions prescribed by doctors</string>
    <string name="notes">Grades</string>
    <string name="personal_record_of_comments">Personal record of comments</string>
    <string name="doctors">doctors</string>
    <string name="contact_details_of_your_doctors">Contact details of your doctors</string>
    <string name="laboratories">Laboratories</string>
    <string name="archive_your_lab_results">Archive your lab results</string>
    <string name="insurance">Insurance</string>
    <string name="data_of_your_insurance_policies">Data from your insurance policies</string>
    <string name="please_click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="delete_this_result">Delete these results</string>
    <string name="delete_result_desc">This action is not reversible, and will remove these results and their links.</string>
    <string name="deletes">ELIMINATE</string>
    <string name="startDate_end_date_">There must be a difference of 9 months between the start date and the estimated completion date</string>
    <string name="add_doctor_title">Share data with doctor</string>
    <string name="input_field_required_validation">Please be sure to enter all the required fields.</string>
    <string name="input_field_required_title_validation">incomplete fields</string>
    <string name="input_field_required_try_again">Try again</string>
    <string name="ok">Ok</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_with_social_accounts">Login with social accounts</string>
    <string name="login_email_address">Email Address</string>
    <string name="or">Or</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_message">Enter the 4 digit OTP sent to</string>
    <string name="verify">Verify</string>
    <string name="expiring_in">Expiring in</string>
    <string name="resendOtp">Resend OTP</string>
    <string name="google" translatable="false">Google</string>
    <string name="facebook" translatable="false">Facebook</string>
</resources>