<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.wacmobz.todo.salud.view.customview.WacTextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="21sp"

        android:text="@string/input_field_required_title_validation"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:customFontThickness="bold" />

    <com.wacmobz.todo.salud.view.customview.WacTextView
        android:id="@+id/content_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_title"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="24dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_regular"
        android:gravity="top"
        android:lineSpacingExtra="8dp"
        android:text="@string/input_field_required_validation"
        android:textColor="#8a000000"
        android:textSize="16sp" />



    <com.wacmobz.todo.salud.view.customview.WacTextView
        android:id="@+id/tryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content_text_view"
     android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="18dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:textAllCaps="true"
        android:paddingBottom="10dp"
        android:text="@string/input_field_required_try_again"
        app:customFontThickness="bold"
        android:textColor="#1fabf4"
        android:textSize="14sp" />


</RelativeLayout>