<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imageArrowBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:padding="@dimen/_15sdp"
        android:src="@drawable/ic_back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorBlack" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageArrowBack"
        app:layout_constraintBottom_toTopOf="@id/text_skip">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/welcomeBackText"
                style="@style/GilroySemiBold"
                android:drawablePadding="@dimen/_5sdp"
                android:padding="8dp"
                android:text="@string/welcome_back"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/loginWithSocialText"
                style="@style/GilroyRegular"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/login_with_social_accounts"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeBackText" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/linear_facebook_google"
                android:layout_width="0dp"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:backgroundTint="@color/facebook_btn_color"
                android:fontFamily="@font/gilroy_semi_bold"
                android:text="@string/facebook"
                app:iconGravity="textStart"

                app:icon="@drawable/ic_facebook"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toStartOf="@+id/gSignIn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginWithSocialText" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/gSignIn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:backgroundTint="@color/google_btn_color"
                android:fontFamily="@font/gilroy_semi_bold"
                android:text="@string/google"
                app:iconGravity="textStart"
                app:icon="@drawable/ic_google"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="@+id/linear_facebook_google"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linear_facebook_google" />

            <View
                android:id="@+id/view18"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_50sdp"
                android:background="@color/view_grey_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_facebook_google" />

            <TextView
                android:id="@+id/orTextView"
                style="@style/GilroySemiBold"
                android:background="@color/colorPrimary"
                android:padding="@dimen/_10sdp"
                android:text="@string/or"
                android:textColor="@color/color_grey_text"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toBottomOf="@+id/view18"
                app:layout_constraintEnd_toEndOf="@+id/view18"
                app:layout_constraintStart_toStartOf="@+id/view18"
                app:layout_constraintTop_toTopOf="@+id/view18" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextLayout"
                style="@style/TextInputLayout"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_25sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/gilroy_medium"
                    android:hint="@string/login_email_address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextLayout"
                style="@style/TextInputLayout"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTextLayout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/gilroy_medium"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/text_enter"
                android:layout_width="0dp"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:backgroundTint="@color/color_dark_blue_text"
                android:fontFamily="@font/gilroy_semi_bold"
                android:text="@string/label_login"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextLayout" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_forget_password"
                style="@style/GilroySemiBold"
                android:layout_marginTop="@dimen/_8sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:padding="8dp"
                android:text="@string/label_forgot_password_q"
                android:textColor="@color/color_dark_blue_text"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_enter" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/text_register"
                android:layout_width="0dp"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:backgroundTint="@color/color_dark_blue_text"
                android:fontFamily="@font/gilroy_semi_bold"
                android:text="@string/login_register"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_forget_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_skip"
        style="@style/GilroySemiBold"
        android:drawableEnd="@drawable/ic_next_arrow"
        android:drawablePadding="@dimen/_5sdp"
        android:gravity="center_vertical"
        android:padding="@dimen/_15sdp"
        android:text="@string/login_continue_without_registration"
        android:textSize="@dimen/_13ssp"
        app:drawableTint="@color/color_blue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>