<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_20sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_10sdp"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/alertTitle"
            style="@style/GilroySemiBold"
            android:drawablePadding="@dimen/_5sdp"
            android:padding="8dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/login_forgot_password_message_sent_popup_heading"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/messageText"
            style="@style/GilroySemiBold"
            android:drawablePadding="@dimen/_5sdp"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/login_forgot_password_message_sent_popup_content"
            android:textColor="@color/color_grey_text"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alertTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_47sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:backgroundTint="@color/color_dark_blue_text"
            android:text="@string/ok"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/_3sdp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@+id/messageText" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>